// Health Predictor System - Database Design v2
// Thiết kế database cho hệ thống dự đoán sức khỏe với ML

Project health_predictor_system_v2 {
  database_type: 'PostgreSQL'
  Note: '''
    # Health Predictor System Database v2
    
    Hệ thống dự đoán sức khỏe với Machine Learning:
    - Quản lý user (bác sĩ, người bệnh, admin)
    - Lịch sử bệnh án (do bác sĩ hoặc hệ thống chuẩn đoán)
    - Train model tự động sau mỗi phiên bác sĩ làm việc
    - Theo dõi bệnh lây truyền
  '''
}

// Bảng người dùng hệ thống
Table users {
  id integer [primary key, increment]
  username varchar(50) [unique, not null]
  email varchar(100) [unique, not null]
  password_hash varchar(255) [not null]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  date_of_birth date
  gender varchar(10) [note: 'male, female, other']
  phone varchar(20)
  address text
  
  // Thông tin riêng cho người bệnh
  current_latitude decimal(10, 8) [note: 'Vị trí hiện tại - chỉ cho patient']
  current_longitude decimal(11, 8) [note: 'Vị trí hiện tại - chỉ cho patient']
  current_diseases text [note: 'Bệnh đang mắc - JSON array of disease IDs']
  
  // Thông tin chung
  role varchar(20) [not null, note: 'doctor, patient, admin']
  is_active boolean [default: true]
  last_login timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    (first_name, last_name)
    email
    phone
    role
    (current_latitude, current_longitude) [name: 'idx_user_location']
  }
  
  Note: 'Bảng quản lý người dùng: bác sĩ, người bệnh, admin'
}

// Bảng các triệu chứng
Table symptoms {
  id integer [primary key, increment]
  name varchar(100) [unique, not null]
  code varchar(20) [unique, note: 'Mã triệu chứng']
  description text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    code
  }
  
  Note: 'Danh mục các triệu chứng có thể theo dõi'
}

// Bảng các loại bệnh
Table diseases {
  id integer [primary key, increment]
  name varchar(100) [unique, not null]
  code varchar(20) [unique, note: 'ICD-10 hoặc mã tự định nghĩa']
  description text
  
  // Thông tin về khả năng lây truyền
  is_contagious boolean [default: false, not null, note: 'Có lây truyền không']
  
  // Thông tin khác
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    name
    code
    is_contagious
  }
  
  Note: 'Danh mục các loại bệnh với thông tin lây truyền'
}

// Bảng lịch sử bệnh án
Table medical_records {
  id integer [primary key, increment]
  user_id integer [ref: > users.id, not null, note: 'Người bệnh']
  doctor_id integer [ref: > users.id, note: 'Bác sĩ chẩn đoán (null nếu là hệ thống)']
  
  // Phân loại
  record_type varchar(20) [not null, note: 'doctor_diagnosis, system_prediction']
  confidence_score decimal(5,4) [note: 'Độ tin cậy (chỉ cho system_prediction)']

  // Trạng thái
  status varchar(50) [note: 'new, completed']
  
  // Đánh giá độ chính xác
  is_accurate boolean [note: 'Có chính xác hay không (đánh giá sau khi có kết quả thực tế)']
  
  // Điều kiện môi trường
  weather_temp decimal(5,2) [note: 'Nhiệt độ thời tiết (°C)']
  humidity integer [note: 'Độ ẩm (%)']
  air_quality_index integer [note: 'Chỉ số chất lượng không khí']
  season varchar(20) [note: 'spring, summer, autumn, winter']


  
  created_at timestamp [default: `now()`]
  create_by integer
  updated_at timestamp [default: `now()`]
  update_by integer
  
  Indexes {
    user_id
    doctor_id
    record_type
    created_at
  }
  
  Note: 'Lịch sử bệnh án - do bác sĩ hoặc hệ thống chuẩn đoán'
}

// Bảng triệu chứng trong từng bệnh án (many-to-many)
Table record_symptoms {
  id integer [primary key, increment]
  record_id integer [ref: > medical_records.id, not null]
  symptom_id integer [ref: > symptoms.id, not null]
  
  Indexes {
    (record_id, symptom_id) [unique]
    symptom_id
  
  }
  
  Note: 'Triệu chứng cụ thể trong từng bệnh án'
}

// Bảng bệnh được chẩn đoán trong từng bệnh án (many-to-many)
Table record_diseases {
  id integer [primary key, increment]
  record_id integer [ref: > medical_records.id, not null]
  disease_id integer [ref: > diseases.id, not null]
  
  // Tỉ lệ mắc bệnh
  probability decimal(5,4) [note: 'Tỉ lệ/xác suất mắc bệnh (0.0000 - 1.0000)']
  
  Indexes {
    (record_id, disease_id) [unique]
    disease_id
  }
  
  Note: 'Bệnh được chẩn đoán trong từng bệnh án'
}

// Bảng lịch sử train model
Table model_training_history {
  id integer [primary key, increment]
  trigger_type varchar(30) [note: 'doctor_session_end, user_feedback']
  triggered_by integer [ref: > users.id, note: 'User trigger training']
  
  // Dữ liệu training
  training_data_count integer [note: 'Số lượng bản ghi dùng để train']
  doctor_diagnosed_count integer [note: 'Số bản ghi do bác sĩ chẩn đoán']
  system_predicted_count integer [note: 'Số bản ghi do hệ thống dự đoán']
  
  deployed_at timestamp
  
  // Thời gian
  training_started_at timestamp [default: `now()`]
  training_completed_at timestamp
  training_duration_seconds integer
  
  // Status
  status varchar(20) [default: 'running', note: 'running, completed, failed, cancelled']
  error_message text
  notes text
  
  Indexes {
    trigger_type
    triggered_by
    training_started_at
    status
  }
  
  Note: 'Lịch sử train model sau mỗi phiên bác sĩ hoặc theo lịch'
}

// Bảng phiên làm việc của bác sĩ
Table doctor_sessions {
  id integer [primary key, increment]
  doctor_id integer [ref: > users.id, not null]
  session_start timestamp [default: `now()`]
  session_end timestamp
  
  // Thống kê phiên làm việc
  total_records_created integer [default: 0]
  total_diagnoses_made integer [default: 0]
  total_patients_seen integer [default: 0]
  
  // Trigger training
  auto_train_triggered boolean [default: false]
  training_id integer [ref: > model_training_history.id]
  
  status varchar(20) [default: 'active', note: 'active, completed, interrupted']
  notes text
  
  Indexes {
    doctor_id
    session_start
    session_end
    status
  }
  
  Note: 'Phiên làm việc của bác sĩ - trigger train model khi kết thúc'
}

// Relationships Summary:
// users 1:many medical_records (user_id - người bệnh)
// users 1:many medical_records (doctor_id - bác sĩ chẩn đoán)
// users 1:many medical_records (verified_by - bác sĩ xác nhận)
// medical_records 1:many record_symptoms
// medical_records 1:many record_diseases
// symptoms 1:many record_symptoms
// diseases 1:many record_diseases
// users 1:many model_training_history (triggered_by)
// users 1:many doctor_sessions (doctor_id)
// doctor_sessions 1:1 model_training_history (training_id)
// users 1:many system_logs 